2005-05-13  Per Bothner  <per@bothner.com>

	* kawa/lang/Quote.java (expand_pair): Rewrite to avoid deep recursion
	(and possible StackOverflow) on long lists.

2005-05-10  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite): Don't follow FieldLocation
	if not inlineOk as that may fail compiling a lambda context.

2005-05-06  Per Bothner  <per@bothner.com>

	* kawa/GuiConsole.java: Some updates for changed environment handling.
	* kawa/Shell.java (run): Remove one overloaded method.
	* kawa/repl.java (processArgs): Update accordingly.
	* kawa/lang/Eval.java(evalBody): Don't change current Environment.
	* kawa/lang/Translator.java (<init>): Use current Environment for env.
	* kawa/standard/Scheme.java (getNewEnvironment): Remove method.
	(<clinit>): Don't getNewEnvironment.
	(lookupBuiltin): New method, based on code from ScmEnv.
	* kawa/standard/ScmEnv.java: No longer needed - functionality
	merged into Scheme's lookupBuiltin.
	* kawa/standard/Makefile.am: Update accordingly.

	* kawa/MessageArea.java (write): Do setCaretPosition.

2005-04-21  Per Bothner  <per@bothner.com>

	* kawa/standard/require.java: Use new contextDecl/setContextDecl
	accessors instead of accessing context field directly.

2005-04-20  Per Bothner  <per@bothner.com>

	Solidify support for re-exporting imported declarations.
	* kawa/lang/Translator.java (processAccesses): If decl is refernced
	by an exported macro, than it must be non-simple.
	* kawa/standard/require.java (importDefinitions): Recognize and
	create declarations for MODULE_REFERENCEs.
	(makeDeclInModule): Split into ...
	(makeDeclInModule1, makeDeclInModule2): ... two new methods.

	* kawa/standard/require.java (scanForDefinitions): Use matches
	method of Translator to check for 'NAME.

2005-04-19  Per Bothner  <per@bothner.com>

	* NEWS: Resurrect, since required by GNU/automake standards,
	but (at least for now) only a reference to the news.html web-page.

2005-04-18  Per Bothner  <per@bothner.com>
