@@ -1,3 +1,7 @@
+2005-05-17  Per Bothner  <per@bothner.com>
+
+	* kawa/standard/fluid_let.java (rewrite): Look for liexlca binding.
+
 2005-05-13  Per Bothner  <per@bothner.com>
 
 	* kawa/lang/Quote.java (expand_pair): Rewrite to avoid deep recursion
